--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fullcalendar/list": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
-    "@mui/icons-material": "^5.15.10",
+    "@mui/icons-material": "^5.16.9",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.5",
     "@nivo/bar": "^0.84.0",
@@ -27,11 +27,18 @@
     "@nivo/line": "^0.84.0",
     "@nivo/pie": "^0.84.0",
     "@nivo/stream": "^0.84.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "alert": "^6.0.2",
+    "axios": "^1.7.9",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.1",
+    "sweet": "^0.1.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
